[package]
name = "graphene-rs"
keywords = ["graphene", "graphene-rs", "gtk-rs", "gnome", "GUI"]
readme = "README.md"
documentation = "https://gtk-rs.org/gtk-rs-core/stable/latest/docs/graphene/"
description = "Rust bindings for the Graphene library"
authors.workspace = true
edition.workspace = true
exclude.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "graphene"

[features]
v1_12 = ["ffi/v1_12"]

[dependencies]
ffi = { package = "graphene-sys", path = "sys" }
libc.workspace = true
glib.workspace = true

[dev-dependencies]
gir-format-check.workspace = true
