[package]
name = "cairo-sys-rs"
license = "MIT"
authors = ["The gtk-rs Project Developers"]
homepage = "https://gtk-rs.org/"
description = "FFI bindings to libcairo"
version = "0.15.1"
keywords = ["cairo", "ffi", "gtk-rs", "gnome"]
repository = "https://github.com/gtk-rs/gtk-rs-core"
build = "build.rs"
edition = "2021"
rust-version = "1.56"

[package.metadata.system-deps.cairo]
name = "cairo"
version = "1.14"

[package.metadata.system-deps.cairo.v1_16]
version = "1.16"

[package.metadata.system-deps."cairo-gobject"]
name = "cairo-gobject"
version = "1.14"
feature = "use_glib"

[package.metadata.system-deps."cairo-gobject".v1_16]
version = "1.16"

[lib]
name = "cairo_sys"

[features]
dox = ["x11/dox"]
v1_16 = []
xlib = ["x11"]
png = []
pdf = []
svg = []
ps = []
freetype = []
script = []
xcb = []
use_glib = ["glib"]
win32-surface = ["winapi"]

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
optional = true
path = "../../glib/sys"
version = "0.15.1"

[dependencies.x11]
optional = true
version = "2.16"
features = ["xlib"]

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.2", features = ["windef"], optional = true }

[build-dependencies]
system-deps = "6"
