[package]
name = "gio-unix-sys"
build = "build.rs"

[package.version]
workspace = true

[package.edition]
workspace = true

[package.license]
workspace = true

[package.metadata.system-deps.glib_2_0]
name = "glib-2.0"
version = "2.56"

[package.metadata.system-deps.gio_unix_2_0]
name = "gio-unix-2.0"
version = "2.56"

[package.metadata.system-deps.gio_unix_2_0.v2_58]
version = "2.58"

[package.metadata.system-deps.gio_unix_2_0.v2_60]
version = "2.60"

[package.metadata.system-deps.gio_unix_2_0.v2_66]
version = "2.66"

[package.metadata.system-deps.gio_unix_2_0.v2_82]
version = "2.82"

[package.metadata.system-deps.gio_unix_2_0.v2_84]
version = "2.84"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[lib]
name = "gio_unix_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
workspace = true

[dependencies.gobject-sys]
workspace = true

[dependencies.gio-sys]
workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2_58 = []
v2_60 = ["v2_58"]
v2_66 = ["v2_60"]
v2_82 = ["v2_66"]
v2_84 = ["v2_82"]
