[package]
name = "glib-unix-sys"
build = "build.rs"
description = "FFI bindings to libglib-2.0 Unix APIs"
keywords = ["glib", "ffi", "gtk-rs", "gnome"]

[package.authors]
workspace = true

[package.edition]
workspace = true

[package.exclude]
workspace = true

[package.homepage]
workspace = true

[package.license]
workspace = true

[package.repository]
workspace = true

[package.rust-version]
workspace = true

[package.version]
workspace = true

[package.metadata.system-deps.glib_2_0]
name = "glib-2.0"
version = "2.56"

[package.metadata.system-deps.glib_2_0.v2_80]
version = "2.80"

[package.metadata.system-deps.glib_2_0.v2_64]
version = "2.64"

[package.metadata.system-deps.glib_2_0.v2_88]
version = "2.87"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition"]

[lib]
name = "glib_unix_sys"

[dependencies]
libc = "0.2"

[dependencies.glib-sys]
workspace = true

[build-dependencies]
system-deps = "7"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2_80 = ["v2_64"]
v2_64 = []
v2_88 = ["v2_80"]
