[build-dependencies]
system-deps = "6"

[dependencies]
libc = "0.2"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []
v2_58 = []
v2_60 = ["v2_58"]
v2_62 = ["v2_60"]
v2_64 = ["v2_62"]
v2_66 = ["v2_64"]
v2_68 = ["v2_66"]
v2_70 = ["v2_68"]
v2_72 = ["v2_70"]
v2_74 = ["v2_72"]
v2_76 = ["v2_74"]

[lib]
name = "glib_sys"

[package]
authors = ["The gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libglib-2.0"
homepage = "https://gtk-rs.org/"
keywords = ["glib", "ffi", "gtk-rs", "gnome"]
license = "MIT"
name = "glib-sys"
repository = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.17.10"
edition = "2021"
rust-version = "1.64"

[package.metadata.docs.rs]
features = ["dox"]

[package.metadata.system-deps.glib_2_0]
name = "glib-2.0"
version = "2.56"

[package.metadata.system-deps.glib_2_0.v2_58]
version = "2.58"

[package.metadata.system-deps.glib_2_0.v2_60]
version = "2.60"

[package.metadata.system-deps.glib_2_0.v2_62]
version = "2.62"

[package.metadata.system-deps.glib_2_0.v2_64]
version = "2.64"

[package.metadata.system-deps.glib_2_0.v2_66]
version = "2.66"

[package.metadata.system-deps.glib_2_0.v2_68]
version = "2.68"

[package.metadata.system-deps.glib_2_0.v2_70]
version = "2.70"

[package.metadata.system-deps.glib_2_0.v2_72]
version = "2.72"

[package.metadata.system-deps.glib_2_0.v2_74]
version = "2.74"

[package.metadata.system-deps.glib_2_0.v2_76]
version = "2.76"

[package.metadata.system-deps.gobject_2_0]
name = "gobject-2.0"
version = "2.56"

[package.metadata.system-deps.gobject_2_0.v2_58]
version = "2.58"

[package.metadata.system-deps.gobject_2_0.v2_62]
version = "2.62"
