[build-dependencies]
pkg-config = "0.3.7"
system-deps = "6"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
path = "../../glib/sys"
version = "0.15.1"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
dox = []

[lib]
name = "graphene_sys"

[package]
authors = ["The gtk-rs Project Developers"]
build = "build.rs"
description = "FFI bindings to libgraphene-1.0"
homepage = "https://gtk-rs.org/"
keywords = ["graphene", "ffi", "gtk-rs", "gnome"]
license = "MIT"
name = "graphene-sys"
repository = "https://github.com/gtk-rs/gtk-rs-core"
version = "0.15.12"
edition = "2021"
rust-version = "1.56"
[package.metadata.docs.rs]
features = ["dox"]
[package.metadata.system-deps.graphene_gobject_1_0]
name = "graphene-gobject-1.0"
version = "1.10"
