[package]
name = "glib-dependent-dependent"
version = "0.1.0"
authors = ["François Laignel <fengalin@free.fr>"]
description = "crate that depends on a glib-rs dependent crate for validation of glib re-exports in proc-macros"
keywords = ["gtk-rs-core", "integration"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
# Use `gstreamer` as a simulation of an identified crate re-exporting `glib`.
gst = { package = "gstreamer", path = "../gstreamer" }
# Use `gtk` optionally so that it is part of the declared dependencies.
gtk = { path = "../gtk", optional = true }
