[package]
# This crate is named `gtk` so that we can check that `glib` re-export detection succeeds.
name = "gtk"
version = "0.1.0"
authors = ["François Laignel <fengalin@free.fr>"]
description = "gtk simulator as a glib dependent crate for validation of glib re-exports in proc-macros"
keywords = ["gtk-rs-core", "integration"]
license = "MIT/Apache-2.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
glib = { path = "../../../glib" }
